<resources>
    <string name="app_name">Cryptonite</string>
    <string name="about">Cryptonite\nhttp://code.google.com/p/cryptonite\n\nBased on EncFS\nhttp://www.arg0.net/encfs\n\nBased on TrueCrypt, freely available at http://www.truecrypt.org/</string>
    <string name="pref_name">Cryptonite preferences</string>
    <string name="preferences">Preferences</string>
    <string name="about_menu">About</string>
    <string name="cb_builtin_title">Use built-in file browser</string>
    <string name="cb_builtin_summary">Always use the built-in file browser</string>
    <string name="cb_builtin_enabled">Always using built-in file browser</string>
    <string name="cb_builtin_disabled">Using OpenIntents File Browser (if available)</string>
    <string name="cb_norris_title">Chuck Norris mode</string>
    <string name="cb_norris_summary">Don\'t show paranoid warnings</string>
    <string name="cb_norris_enabled">Disabled warning messages</string>
    <string name="cb_norris_disabled">Enabled warning messages</string>
    <string name="cb_extcache_title">Use external storage</string>
    <string name="cb_extcache_summary">Save temporary files on SD card</string>
    <string name="cb_extcache_enabled">Saving to SD card in </string>
    <string name="cb_extcache_disabled">Saving to internal memory in </string>
    <string name="cb_no_external_storage">No SD card was found</string>
    <string name="cb_appfolder_title">Use app folder on Dropbox</string>
    <string name="cb_appfolder_summary">Restrict access to an app folder on your Dropbox</string>
    <string name="cb_appfolder_enabled">Using app folder</string>
    <string name="cb_appfolder_disabled">Using full Dropbox access</string>
    <string name="cb_anykey_title">Accept any password</string>
    <string name="cb_anykey_summary">Accept any password and unlock different files depending on the password</string>
    <string name="cb_anykey_enabled">Always accepting any password</string>
    <string name="cb_anykey_disabled">Always refusing bad passwords</string>
    <string name="txt_mntpoint_title">Mount point</string>
    <string name="txt_mntpoint_dlgtitle">Mount point</string>
    <string name="txt_mntpoint_dlgmsg">EncFS mount path:</string>
    <string name="txt_mntpoint_posbtn">OK</string>
    <string name="txt_mntpoint_negbtn">File browser</string>
    <string name="txt_mntpoint_nexists">Mount point doesn\'t exist</string>
    <string name="txt_mntpoint_nisdir">Mount point is not a directory</string>
    <string name="txt_mntpoint_ncanwrite">Mount point isn\'t writable</string>
    <string name="txt_mntpoint_nempty">Mount point isn\'t empty</string>
    <string name="txt_clearcache_title">Clear cache</string>
    <string name="txt_clearcache_summary">Delete temporary files</string>
    <string name="txt_clearcache_enabled">Temporary files have been deleted</string>
    <string name="cb_hijack_title">Hijack system process for mounting</string>
    <string name="cb_hijack_summary">Masks the encfs binary as a system process to force mounting. Ugly, insecure and experimental. Use with caution.</string>
    <string name="cb_hijack_enabled">Hijacking system process</string>
    <string name="cb_hijack_disabled">Stopped hijacking system process</string>
    <string name="sdcard_not_writable">Can\'t write to SD card</string>
    <string name="title_password">EncFS password</string>
    <string name="title_confirm_password">Confirm EncFS password</string>
    <string name="title_new_folder">Create new folder</string>
    <string name="settings_password">Enter password:</string>
    <string name="pw_mismatch">Passwords didn\'t match</string>
    <string name="settings_new_folder">New folder name:</string>
    <string name="running_encfs">Running EncFS&#8230;</string>
    <string name="running_export">Exporting files&#8230;</string>
    <string name="copying_bins">Copying binaries&#8230;</string>
    <string name="no_fuse">FUSE is not supported on your device</string>
    <string name="browse_info">Open EncFS volume</string>
    <string name="create_info">Create EncFS volume</string>
    <string name="mount_info">Mount EncFS volume</string>
    <string name="mount_info_unsupported">Mounting is not supported on this phone</string>
    <string name="invalid_encfs">This is not a valid EncFS root volume</string>
    <string name="browse_failed">Failed to decode the EncFS volume; check password and file permissions.</string>
    <string name="export_failed">Failed to export files; check permissions.</string>
    <string name="export_success">Successfully exported files</string>
    <string name="empty_password">Password was empty</string>
    <string name="target_dir_cleanup_failure">Couldn\'t clean up target directory</string>
    <string name="target_dir_setup_failure">Couldn\'t set up target directory</string>
    <string name="jni_arg_too_large">File list too large. Try selecting whole directories.</string>
    <string name="app_oi_missing">OI file browser not installed.</string>
    <string name="app_oi_get">Go to Market</string>
    <string name="app_oi_builtin">Use built-in file browser</string>
    <string name="market_missing">Google Market wasn\'t found on your device</string>
    <string name="disclaimer">Dragons ahead!</string>
    <string name="no_warranty">This program is under development. Use at your own risk. It is distributed WITHOUT ANY WARRANTY.</string>
    <string name="understand">I understand</string>
    <string name="activity_not_found_title">Can\'t open this file</string>
    <string name="activity_not_found_msg">Couldn\'t find any application for this file type</string>
    <string name="content_type_not_found_title">Can\'t detect file type</string>
    <string name="content_type_not_found_msg">Couldn\'t detect file type</string>
    <string name="browse_decrypted">Browse decrypted folder</string>
    <string name="forget_decryption">Forget decryption</string>
    <string name="local_read_fail">Problem reading from local folder</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="file_not_found">File not found: </string>
    <string name="file_list_problem">There was a problem listing your files.</string>
    <string name="export_warning">Exporting files can be slow and will copy decrypted files to your phone. Are you sure you want to proceed?</string>
    <string name="delete_warning">Are you sure you want to delete this file?</string>
    <string name="new_folder_warning">Creating folders is an experimental feature. Are you sure you want to proceed?</string>
    <string name="only_files">Can only upload single files at this time</string>
    <string name="file_exists">Encrypted file exists</string>
    <string name="file_exists_options">Overwrite, rename or cancel?</string>
    <string name="file_exists_options_short">Overwrite or cancel?</string>
    <string name="overwrite">Overwrite</string>
    <string name="rename">Rename</string>
    <string name="rename_failure">Rename</string>
    <string name="encrypt_failure">Failed to encrypt file</string>
    <string name="encrypting">Encrypting file&#8230;</string>
    <string name="decrypt_failure">Failed to decrypt file</string>
    <string name="decrypting">Decrypting file&#8230;</string>
    <string name="mount_fail">Failed to mount volume</string>
    <string name="mount_point_invalid">Please specify a valid mount point in the preferences menu.</string>
    <string name="umount_fail">Failed to unmount volume</string>
    <string name="umount_still_mounted">An EncFS volume is still mounted on your system. Do you want to unmount all remaining volumes?</string>
    <string name="umount_all">Unmount all</string>
    <string name="umount_first">Can\'t change the mount point while a volume is mounted. Unmount first.</string>
    <string name="jni_fail">Failed to load native library. Please report an issue or send me an email so that I can fix this bug. Will exit now.</string>
    <string name="crash_report">Cryptonite crash report</string>
    <string name="crash_report_content">Please provide information about your device, manufacturer, and Android version.</string>
    <string name="local_tabtitle">LOCAL</string>
    <string name="expert_tabtitle">EXPERT</string>
    <string name="unsupported_encoding">UTF 8 encoding is not supported on your device</string>
    <string name="not_plain_text">This is probably not a plain text file. Would you still like to preview it?</string>
    <string name="internal_error">Internal program error; please try again</string>
    <string name="encfs_success">Successfully decrypted EncFS volume</string>
    <string name="encfs_success_mount">Successfully mounted EncFS volume on </string>
    <string name="empty_encoded_filename">Couldn\'t encode file name; please try again</string>
    <string name="decode_failure">Couldn\'t decode volume. Please try again and report this issue if the problem persists.</string>
    <string name="out_of_memory">File is too large for text preview</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="no_volumes">Couldn\'t find any stored volumes</string>
    <string name="delete_entry">Remove entry</string>
    <string name="stored_volumes">Stored volumes</string>
    <string name="default_restore">Restore default</string>
    <string name="default_save">Save as default</string>
    <string name="default_saved">Saved as new default</string>
    <string name="default_missing">Couldn\'t find default folder</string>
    <string name="default_searching">Looking for default folder&#8230;</string>
    <string name="config_notfound">Couldn\'t find EncFS config file</string>
    <string name="config_use_external">Couldn\'t find an EncFS configuration file in this directory. Do you want to use an external file?</string>
    <string name="term_info">Run EncFS and TrueCrypt in terminal</string>
    <string name="term_prompt">Start terminal</string>
    <string name="term_prompt_root">Start root terminal</string>
    <string name="app_terminal_missing">Terminal emulator not installed or outdated.</string>
    <string name="app_terminal_get">Go to Market</string>
    <string name="app_terminal_outdated">Your version of Android Terminal Emulator is outdated. Please update.</string>
    <string name="term_service_running">A terminal session is still running in the background. Please close before proceeding.</string>
    <string name="dropbox_link">Link with Dropbox</string>
    <string name="dropbox_connecting">Connecting to Dropbox&#8230;</string>
    <string name="dropbox_unlink">Unlink from Dropbox</string>
    <string name="dropbox_reading">Reading Dropbox&#8230;</string>
    <string name="dropbox_decrypt">Decrypt Dropbox folder</string>
    <string name="dropbox_create">Create Dropbox volume</string>
    <string name="dropbox_auth_fail">Couldn\'t authenticate with Dropbox</string>
    <string name="dropbox_read_fail">Problem reading from Dropbox</string>
    <string name="dropbox_upload_fail">Couldn\'t upload to Dropbox</string>
    <string name="dropbox_service_started">db_running</string>
    <string name="dropbox_service_stopped">db_stopped</string>
    <string name="dropbox_service_label">Dropbox linked to Cryptonite</string>
    <string name="dropbox_root_name">Dropbox</string>
    <string name="dropbox_enable">Enable Dropbox</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="upload">Upload file to this folder</string>
    <string name="new_folder">New folder</string>
    <string name="local_decrypt">Decrypt local folder</string>
    <string name="local_create">Create local volume</string>
    <string name="mount">Mount EncFS</string>
    <string name="viewmount">View mounted</string>
</resources>