<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

  <CheckBoxPreference
      android:key="cb_builtin"
      android:title="@string/cb_builtin_title"
      android:summary="@string/cb_builtin_summary" />

    <CheckBoxPreference
      android:key="cb_norris"
      android:title="@string/cb_norris_title"
      android:summary="@string/cb_norris_summary" />
  
    <CheckBoxPreference
      android:key="cb_extcache"
      android:title="@string/cb_extcache_title"
      android:summary="@string/cb_extcache_summary" />
  
    <CheckBoxPreference
      android:key="cb_appfolder"
      android:title="@string/cb_appfolder_title"
      android:summary="@string/cb_appfolder_summary" />
  
    <CheckBoxPreference
      android:key="cb_anykey"
      android:title="@string/cb_anykey_title"
      android:summary="@string/cb_anykey_summary" />
    
    <Preference
        android:key="txt_mntpoint"
        android:title="@string/txt_mntpoint_title" />
    
</PreferenceScreen>
