<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db_sv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="*" >

        <Button
            android:id="@+id/btnAuthDb"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/dropbox_link"
            android:typeface="normal" >
        </Button>

        <TextView
            android:id="@+id/tvBrowseDb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_info"
            android:textStyle="bold"
            android:typeface="normal" >
        </TextView>

        <TableRow android:layout_width="wrap_content" >

            <Button
                android:id="@+id/btnDecryptDb"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/dropbox_decrypt"
                android:typeface="normal" >
            </Button>
            
            <Button
                android:id="@+id/btnBrowseDecryptedDb"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/browse_decrypted"
                android:typeface="normal" >
            </Button>
        </TableRow>
        
        <TableRow android:layout_width="wrap_content" >
            <Button
                android:id="@+id/btnSaveLoadDb"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/save"
                android:typeface="normal" >
            </Button>
        </TableRow>
        
        <TextView
            android:id="@+id/tvCreateDb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_info"
            android:textStyle="bold"
            android:typeface="normal" >
        </TextView>

        <Button
            android:id="@+id/btnCreateDb"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/dropbox_create"
            android:typeface="normal" >
        </Button>

        <TextView
            android:id="@+id/tvVersionDb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="normal" >
        </TextView>
    </TableLayout>

</ScrollView>